which could cause conflict with local definitions of "e"
B FXIPCChannel wasn't retrying message sends if they part completed
R Issued snapshot 1
B FXPipe::writeBlock() wasn't detecting write errors on win32
B Config failed due to lack of build directory on virgin builds
B FXACL would hang on win32 if program was not running as administrator
B Fixed segfault in FXSSLDevice on process exit

+ Added ability to set external array directly in QMemArray and QByteArray
+ Added own definition of struct timeval to the FX namespace as had been
having consistent problems with it sometimes being defined on Win32 and
other times not :(
* Force inlined FXMtxHold on compilers that support such things
+ Made it possible for FXAtomicInt and FXMutex to be inlineable to all
source files
* Removed locking in various places where it wasn't needed
+ Added FXProcess::getNsCount()
+ Added operator!= to FXHostAddress
- Removed the FXHostAddress::isLoopback() method
+ Added the FXHostAddress::isLocalMachine() method
* Changed FXFont to always specify anti-aliased and cleartype on Win32
* Now replaces system allocator on FreeBSD too
* FXFSMonitor now can disable itself if it detects a broken FAM implementation
R Issued snapshot 1
+ Added FXACLEntity::homeDirectory()
+ Added FXDEPRECATED macro
+ Added support for MSVC8.0
+ Added FX::Pol::itRevCompare
* FXSSLKey::setAsymmetricKey() now returns *this
+ Added MSVC project files for libjpeg, libtiff, zlib and placeholder
directories for openssl and libpng
- Removed administrator-only code in FXACL


v0.85 13th Feb 2005:
-=-=-=-=-=-=-=-=-=-=
B Fixed compile error in FXRefedObject.h when FXRefedObject subclass defines
its own noMoreReferrers().
B FXIPCChannel should have thrown away ack messages when sender did not
specifiy ack location
B FXPipe was redefining FXERRHWIN for itself and thus losing the changes
implemented in FXException::int_throwWinError()
B FXMemMap::mappedRegion() was failing when offset was in last mapped
region